# c-exam-wuqiuyu-6

./: CMake  CMakeLists.txt  README.md
.github/workflows/: ci.yml  classroom.yml
include/: queue.h
scripts/: build.ps1  build.sh  test.ps1  test.sh
scripts/test/: test_1.sh  test_10.sh  test_2.sh  test_3.sh  test_4.sh  test_5.sh  test_6.sh  test_7.sh  test_8.sh  test_9.sh
src/: main.c  queue.c
test/: test_01_create_destroy.c  test_02_is_empty.c  test_03_enqueue_dequeue.c  test_04_front.c  test_05_back.c  test_06_size.c  test_07_clear.c  test_08_dequeue_value.c  test_09_unlimited_capacity.c  test_10_fifo_order.c
